jena-shex/src/test/files/shexTest/schemas/ExtendAND3G.shex
BASE <http://a.example/>

ABSTRACT <A>                 { <p> [0 1 2 3 4 5 6 7 8 9]+ } AND    /sA..........$/


ABSTRACT <B> EXTENDS @<A> {}
                             AND /s.B.........$/
                             AND
                                 { <p> [0 1   3 4 5 6 7 8 9]+ }
         <C>                  { <p> [0 1 2   4 5 6 7 8 9]+ } AND    /s..C........$/

ABSTRACT <D> EXTENDS @<B> {} AND
                     @<C>
                             AND /s...D.......$/
                             AND
                                 { <p> [0 1 2 3   5 6 7 8 9]+ }
         <E>  EXTENDS @<D>
                                               { <p> [    2              ] }
                                                                   AND /s....E......$/


# A: 0 1 2 3 4 5 6 7 8 9+                         
# B: 0 1   3 4 5 6 7 8 9+                         
# C:       -            +                         
# D: 0 1       5 6 7 8 9+                         
# E: 0 1 +     5 6 7 8 9+, p:2                    
